@@ -1,5 +1,5 @@
-ARG BASE_IMAGE=alpine:latest
-ARG BUILD_IMAGE=eclipse-temurin:17-jdk
+ARG BASE_IMAGE=eclipse-temurin:17-jre-alpine
+ARG BUILD_IMAGE=eclipse-temurin:17-jdk-alpine
 
 FROM ${BUILD_IMAGE} as viaaas-build
 
@@ -9,25 +9,11 @@ ARG TARGETVARIANT
 
 WORKDIR /builder
 
-RUN apt-get update && apt-get install -y git
+RUN apk add git
 RUN git clone -b dev https://github.com/ViaVersion/VIAaaS.git VIAaaS
 
 WORKDIR /builder/VIAaaS
 RUN ./gradlew build
-
-FROM ${BUILD_IMAGE} as jre-build
-
-ARG TARGETOS
-ARG TARGETARCH
-ARG TARGETVARIANT
-
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules java.base \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
 
 FROM ${BASE_IMAGE} as final
 
@@ -36,10 +22,6 @@ ARG TARGETARCH
 ARG TARGETVARIANT
 
 COPY /root /
-
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-COPY --from=jre-build /javaruntime ${JAVA_HOME}
 
 WORKDIR /app
 COPY --from=viaaas-build /builder/VIAaaS/build/libs/VIAaaS-*-all.jar /app/VIAaaS-all.jar
